--- a/apps/webdemo/frontend/package.json
+++ b/apps/webdemo/frontend/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "2.1.0",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-markdown": "9.0.1",
+    "remark-gfm": "4.0.0"
   },
   "devDependencies": {
     "@types/node": "20.12.7",
     "@types/react": "18.2.23",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.5.4",
     "typescript": "5.4.5"
   }
 }
